# gr-eve

./: CMakeLists.txt  MANIFEST.md
cmake/Modules/: eveConfig.cmake
docs/: README.eve
docs/doxygen/: Doxyfile.in
docs/doxygen/other/: group_defs.dox  main_page.dox
examples/: README  _test.py  alice_bob_eve_testbed.grc  alice_bob_eve_testbed_orginal.grc  basic_epsilon_greedy.py  basic_monte_carlo.py  confusion_matrix.csv  confusion_matrix_forplot.csv  eve.grc  eve.py  eve_RL_monte_carlo.py  eve_plot_sim.py  eve_re_learn_testbed.grc  eve_re_learn_testbed.py  eve_re_learn_testbed_eg-picks-noise.py  eve_re_learn_testbed_graph.py  eve_re_learn_testbed_noqt.py  eve_sim.grc  eve_sim.py  eve_sim_backup.py  eve_sim_flowgraph.py  file_sink_test.txt  test.py  top_block.py
examples/ai_gym/: DQRNN_notes
examples/ai_gym/models/: QNN_05-20--16-33.data-00000-of-00001  QNN_05-20--16-33.index  QNN_05-20--16-49.data-00000-of-00001  QNN_05-20--16-49.index  QNN_05-20--20-36.data-00000-of-00001  QNN_05-20--20-36.index  QNN_05-20--20-37.data-00000-of-00001  QNN_05-20--20-37.index  QNN_05-20--20-40.data-00000-of-00001  QNN_05-20--20-40.index  QNN_05-20--20-41.data-00000-of-00001  QNN_05-20--20-41.index  QNN_05-20--20-42.data-00000-of-00001  QNN_05-20--20-42.index  QNN_05-20--20-45.data-00000-of-00001  QNN_05-20--20-45.index  QNN_05-20--20-46.data-00000-of-00001  QNN_05-20--20-46.index  QNN_05-20--20-47.data-00000-of-00001  QNN_05-20--20-47.index  QNN_05-20--21-06.data-00000-of-00001  QNN_05-20--21-06.index  QNN_05-20--21-07.data-00000-of-00001  QNN_05-20--21-07.index  QNN_05-20--21-08.data-00000-of-00001  QNN_05-20--21-08.index  QNN_05-20--21-11.data-00000-of-00001  QNN_05-20--21-11.index  QNN_05-20--22-01.data-00000-of-00001  QNN_05-20--22-01.index  QNN_05-20--22-42.data-00000-of-00001  QNN_05-20--22-42.index  QNN_05-20--22-43.data-00000-of-00001  QNN_05-20--22-43.index  QNN_05-20--22-46.data-00000-of-00001  QNN_05-20--22-46.index  QNN_05-20--22-47.data-00000-of-00001  QNN_05-20--22-47.index  QNN_05-20--22-48.data-00000-of-00001  QNN_05-20--22-48.index  (+59 more)
examples/ai_gym/src/: BROKEN_throttle_q-learning-RNN_agent.py  epsilon_greedy.py  my_dqn.ckpt.data-00000-of-00001  my_dqn.ckpt.index  test.py  throttle_agent.py  throttle_env.py  throttle_ep-greedy_agent.py  throttle_q-learning-NN_agent.py  throttle_q-learning-RNN_agent.py  throttle_q-learning-RNN_agent_with_actions.py
examples/csv_data/: confusion_matrix.csv  confusion_matrix_forplot.csv
examples/tables/: learning_model_table.h5
examples/test/: learning_model_table.h5
include/eve/: CMakeLists.txt  api.h
lib/: CMakeLists.txt  qa_eve.cc  qa_eve.h  test_eve.cc
python/: CMakeLists.txt  __init__.py
swig/: CMakeLists.txt  eve_swig.i
